vendor/structopt-0.3.21/tests/ui/multiple_external_subcommand.stderr
error: Only one variant can be marked with `external_subcommand`, this is the second
  --> $DIR/multiple_external_subcommand.rs:14:17
   |
14 |     #[structopt(external_subcommand)]
   |                 ^^^^^^^^^^^^^^^^^^^
